.mat of epicentre source ignored

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ docs/eq_global_manual.docx
 data/epicenters/isc-gem-cat.zip
 
 data/epicenters/isc-gem-cat.csv
+
+data/epicenters/isc-gem-cat_prob.mat
