volcanoes almost done

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ data/epicenters/isc-gem-cat_prob.mat
 data/volcanoes/NGDC_SignificantVolcanicEvents.mat
 
 data/volcanoes/GVP_Volcano_List_OLD.xls
+
+data/volcanoes/GVP_Volcano_List.mat
