--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ data/volcanoes/NGDC_SignificantVolcanicEvents.mat
 data/volcanoes/GVP_Volcano_List_OLD.xls
 
 data/volcanoes/GVP_Volcano_List.mat
+
+data/volcanoes/NGDC_SignificantVolcanicEvents_prob.mat
